[B][COLOR red]Update - v4.4.1 - March 06, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Matrix(py3) compatibility update.[/I]
[COLOR yellow]--[/COLOR][I] Added copy to clipboard feature.  This is accessible from the
    context menu in source select list.  Now you can copy to
    clipboar d url's, file names, and magnet hashes.[/I]

[B][COLOR red]Update - v4.4.0 - Feb. 18, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed renumbering of source select list for direct links when
    "remove uncached torrents" setting is used. Direct links
    are from EasyNews, Filepursuit, Furk, GDrive, Library,
    and Ororo.[/I]

[B][COLOR red]Update - v4.3.9 - Feb. 17, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added BASE32 to HEX conversion for RD cache checking
    of magnets with BASE32 encoded hash. AD and PM do
    this conversion.[/I]
[COLOR yellow]--[/COLOR][I] With the new TORRENTTM scraper added to FenomScrapers
    please clear provider cache.  The cache holds the list of
    pack capable scrapers and requires a fresh fetch of the
    updated list.[/I]

[B][COLOR red]Update - v4.3.8 - Feb. 14, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed issue with RD cache check where scrapers may return
    invalid magnets less than 40 characters in hash length.
    RD terminates the response upon receiving such an
    invalid magnet.[/I]
[COLOR yellow]--[/COLOR][I] Added new "Additional Link Info" to context menu when
    viewing source select list.[/I]
[COLOR yellow]--[/COLOR][I] Source Select has been changed to now present user
    with a YesNo dialog option to view the uncached torrents
    if no cached torrents were returned.  This now makes it
    much easier to cache items yourself via context menu.[/I]
[COLOR yellow]--[/COLOR][I] The Torrent Settings category has been removed.
    There is no longer an option for AD, PM, and RD to
    enable or disable cache checking. There is now one
    setting that applies to all 3 if enabled.  The new setting