@@ -1,3 +1,6 @@
+[B][COLOR red]Update - v4.4.2 - March 06, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed version dependecy issue.[/I]
+
 [B][COLOR red]Update - v4.4.1 - March 06, 2021[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Matrix(py3) compatibility update.[/I]
 [COLOR yellow]--[/COLOR][I] Added copy to clipboard feature.  This is accessible from the
